--- a/data/projects.json
+++ b/data/projects.json
@@ -23,6 +23,110 @@
       "endDate": "2022-12",
       "featured": true,
       "category": "infrastructure"
+    },
+    {
+      "id": "project-3",
+      "title": "Soil Investigation Study in Sermayam District, Merauke",
+      "description": "Geotechnical analysis for soil investigation study in Sermayam District, Merauke.",
+      "technologies": ["Soil Investigation", "Geotechnical Analysis"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2025-01",
+      "category": "geotechnical"
+    },
+    {
+      "id": "project-4",
+      "title": "RED MUD AREA Phase II Alumina Feasibility Study",
+      "description": "Geotechnical survey for Red Mud Area Phase II Alumina Feasibility Study.",
+      "technologies": ["Geotechnical Survey", "Feasibility Study"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2025-01",
+      "category": "mining"
+    },
+    {
+      "id": "project-5",
+      "title": "SMELTER AREA Phase II Alumina Feasibility Study",
+      "description": "Geotechnical survey for Smelter Area Phase II Alumina Feasibility Study.",
+      "technologies": ["Geotechnical Survey", "Feasibility Study"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2025-01",
+      "category": "mining"
+    },
+    {
+      "id": "project-6",
+      "title": "Permeability Study - Way Sekampung Dam, Pringsewu, Lampung",
+      "description": "Permeability study for Way Sekampung Dam project in Pringsewu, Lampung.",
+      "technologies": ["Permeability Testing", "Dam Engineering"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2025-01",
+      "category": "infrastructure"
+    },
+    {
+      "id": "project-7",
+      "title": "Soil Investigation - Rumah Sakin Hasna Medika, Majalengka",
+      "description": "Soil investigation for hospital construction project in Majalengka, West Java.",
+      "technologies": ["Soil Investigation", "Foundation Design"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2024-01",
+      "endDate": "2024-12",
+      "category": "building"
+    },
+    {
+      "id": "project-8",
+      "title": "Soil Investigation - Cable Route Project, Cirebon",
+      "description": "Soil investigation for cable route infrastructure project in Cirebon.",
+      "technologies": ["Soil Investigation", "Infrastructure"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2024-01",
+      "endDate": "2024-12",
+      "category": "infrastructure"
+    },
+    {
+      "id": "project-9",
+      "title": "Soil Investigation - PT ILK Campus Complex, Karawang",
+      "description": "Soil investigation for campus complex development project in Karawang.",
+      "technologies": ["Soil Investigation", "Foundation Design"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2024-01",
+      "endDate": "2024-12",
+      "category": "building"
+    },
+    {
+      "id": "project-10",
+      "title": "Soil Investigation - SARPRAS HIDRO OSEANOGRAFI, North Jakarta",
+      "description": "Soil investigation for education and training facility development in North Jakarta.",
+      "technologies": ["Soil Investigation", "Foundation Design"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2024-01",
+      "endDate": "2024-12",
+      "category": "building"
+    },
+    {
+      "id": "project-11",
+      "title": "Soil Investigation - Pertamina Tank, Cirebon",
+      "description": "Soil investigation for Pertamina tank facility in Cirebon.",
+      "technologies": ["Soil Investigation", "Industrial Facility"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2024-01",
+      "endDate": "2024-12",
+      "category": "industrial"
+    },
+    {
+      "id": "project-12",
+      "title": "Soil Investigation - Pedestrian Bridge, Menteng, Jakarta",
+      "description": "Soil investigation for pedestrian bridge construction in Menteng, Central Jakarta.",
+      "technologies": ["Soil Investigation", "Bridge Engineering"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2025-01",
+      "category": "infrastructure"
+    },
+    {
+      "id": "project-13",
+      "title": "Soil Investigation - Inspectorate General Office, South Jakarta",
+      "description": "Soil investigation for government office building in Kalibata, South Jakarta.",
+      "technologies": ["Soil Investigation", "Foundation Design"],
+      "organization": "PT Meta Bumi Systema",
+      "startDate": "2025-01",
+      "category": "building"
     }
   ]
 }
