update term and data

--- a/data/projects.json
+++ b/data/projects.json
@@ -5,7 +5,7 @@
       "title": "Detailed Engineering Design of Depapre Port",
       "description": "Complete detailed engineering design for port infrastructure in Papua Province.",
       "longDescription": "Led the team as Team Leader and Geotechnical Expert for the detailed engineering design of Depapre Port in Papua Province. The project included comprehensive geotechnical analysis, foundation design, and port infrastructure planning.",
-      "technologies": ["Geotechnical Design", "Port Engineering", "Foundation Design"],
+      "expertise": ["Geotechnical Design", "Port Engineering", "Foundation Design"],
       "organization": "PT BAHARI JAYA SEJAHTERA",
       "startDate": "2022-01",
       "endDate": "2024-12",
@@ -17,7 +17,7 @@
       "title": "Detailed Engineering Design of Lerokis Port",
       "description": "Complete detailed engineering design for port infrastructure in Maluku Province.",
       "longDescription": "Led the team as Team Leader and Geotechnical Expert for the detailed engineering design of Lerokis Port in Maluku Province. The project involved comprehensive geotechnical investigation and port infrastructure design.",
-      "technologies": ["Geotechnical Design", "Port Engineering", "Foundation Design"],
+      "expertise": ["Geotechnical Design", "Port Engineering", "Foundation Design"],
       "organization": "PT BAHARI JAYA SEJAHTERA",
       "startDate": "2021-01",
       "endDate": "2022-12",
@@ -28,7 +28,7 @@
       "id": "project-3",
       "title": "Soil Investigation Study in Sermayam District, Merauke",
       "description": "Geotechnical analysis for soil investigation study in Sermayam District, Merauke.",
-      "technologies": ["Soil Investigation", "Geotechnical Analysis"],
+      "expertise": ["Soil Investigation", "Geotechnical Analysis"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2025-01",
       "category": "geotechnical"
@@ -37,7 +37,7 @@
       "id": "project-4",
       "title": "RED MUD AREA Phase II Alumina Feasibility Study",
       "description": "Geotechnical survey for Red Mud Area Phase II Alumina Feasibility Study.",
-      "technologies": ["Geotechnical Survey", "Feasibility Study"],
+      "expertise": ["Geotechnical Analysis", "Feasibility Study"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2025-01",
       "category": "mining"
@@ -46,7 +46,7 @@
       "id": "project-5",
       "title": "SMELTER AREA Phase II Alumina Feasibility Study",
       "description": "Geotechnical survey for Smelter Area Phase II Alumina Feasibility Study.",
-      "technologies": ["Geotechnical Survey", "Feasibility Study"],
+      "expertise": ["Geotechnical Analysis", "Feasibility Study"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2025-01",
       "category": "mining"
@@ -55,7 +55,7 @@
       "id": "project-6",
       "title": "Permeability Study - Way Sekampung Dam, Pringsewu, Lampung",
       "description": "Permeability study for Way Sekampung Dam project in Pringsewu, Lampung.",
-      "technologies": ["Permeability Testing", "Dam Engineering"],
+      "expertise": ["Permeability Testing", "Soil Analysis"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2025-01",
       "category": "infrastructure"
@@ -64,7 +64,7 @@
       "id": "project-7",
       "title": "Soil Investigation - Rumah Sakin Hasna Medika, Majalengka",
       "description": "Soil investigation for hospital construction project in Majalengka, West Java.",
-      "technologies": ["Soil Investigation", "Foundation Design"],
+      "expertise": ["Soil Investigation", "Foundation Design"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2024-01",
       "endDate": "2024-12",
@@ -74,7 +74,7 @@
       "id": "project-8",
       "title": "Soil Investigation - Cable Route Project, Cirebon",
       "description": "Soil investigation for cable route infrastructure project in Cirebon.",
-      "technologies": ["Soil Investigation", "Infrastructure"],
+      "expertise": ["Soil Investigation", "Soil Analysis"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2024-01",
       "endDate": "2024-12",
@@ -84,7 +84,7 @@
       "id": "project-9",
       "title": "Soil Investigation - PT ILK Campus Complex, Karawang",
       "description": "Soil investigation for campus complex development project in Karawang.",
-      "technologies": ["Soil Investigation", "Foundation Design"],
+      "expertise": ["Soil Investigation", "Foundation Design"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2024-01",
       "endDate": "2024-12",
@@ -94,7 +94,7 @@
       "id": "project-10",
       "title": "Soil Investigation - SARPRAS HIDRO OSEANOGRAFI, North Jakarta",
       "description": "Soil investigation for education and training facility development in North Jakarta.",
-      "technologies": ["Soil Investigation", "Foundation Design"],
+      "expertise": ["Soil Investigation", "Foundation Design"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2024-01",
       "endDate": "2024-12",
@@ -104,7 +104,7 @@
       "id": "project-11",
       "title": "Soil Investigation - Pertamina Tank, Cirebon",
       "description": "Soil investigation for Pertamina tank facility in Cirebon.",
-      "technologies": ["Soil Investigation", "Industrial Facility"],
+      "expertise": ["Soil Investigation", "Foundation Design"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2024-01",
       "endDate": "2024-12",
@@ -114,7 +114,7 @@
       "id": "project-12",
       "title": "Soil Investigation - Pedestrian Bridge, Menteng, Jakarta",
       "description": "Soil investigation for pedestrian bridge construction in Menteng, Central Jakarta.",
-      "technologies": ["Soil Investigation", "Bridge Engineering"],
+      "expertise": ["Soil Investigation", "Soil Analysis"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2025-01",
       "category": "infrastructure"
@@ -123,7 +123,7 @@
       "id": "project-13",
       "title": "Soil Investigation - Inspectorate General Office, South Jakarta",
       "description": "Soil investigation for government office building in Kalibata, South Jakarta.",
-      "technologies": ["Soil Investigation", "Foundation Design"],
+      "expertise": ["Soil Investigation", "Foundation Design"],
       "organization": "PT Meta Bumi Systema",
       "startDate": "2025-01",
       "category": "building"
